# Pixel

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setup.iss  test.ps1
src/: main.rs
src/cli/: start.rs
src/image/: color.rs  filter.rs  mod.rs  shape.rs  tech.rs
src/image/tech/: size.rs
src/tools/: img.rs  mod.rs  open.rs  save.rs
src/utility/: log.rs  mod.rs  parse.rs  ui.rs
src/window/: app.rs  dialogs.rs  mod.rs  update.rs  window.rs
src/window/dialogs/: color.rs  shape.rs  tech.rs
src/window/interface/: bottom.rs  editor.rs  image.rs  main.rs  mod.rs  side_menu.rs  toolbar.rs  top.rs
src/window/modes/: color.rs  filter.rs  main.rs  mod.rs  shape.rs  tech.rs
