[package]
name = "pixel"
version = "0.1.0"
edition = "2024"
authors = ["Mateusz Słotwiński"]
license = "MIT"

[dependencies]
colored = "3.0.0"
console = "0.16.1"
eframe = "0.32.2"
egui_extras = "0.32.2"
env_logger = "0.11.8"
image = "0.25.8"
photon-rs = "0.3.3"
rand = "0.9.2"
rfd = "0.15.4"

[package.metadata.wix]
name = "Pixel"
upgrade-guid = "79076763-79b2-4610-b14f-bad3e5992eb3"
path-guid = "a3d55a28-90ab-4ca7-afa2-ba3c30c57329"
extensions = [
  { extension = "jpg", progid = "Pixel", icon = "assets/icon.ico", open_with = true },
  { extension = "png", progid = "Pixel", icon = "assets/icon.ico", open_with = true },
]
